--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiofiles==23.2.1
+anyio==4.3.0
 asgiref==3.8.1
 asttokens==2.4.1
 certifi==2024.2.2
@@ -10,6 +11,9 @@ django-stubs==4.2.7
 django-stubs-ext==4.2.7
 executing==2.0.1
 gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.6
 ipython==8.23.0
 jedi==0.19.1
@@ -28,6 +32,7 @@ pygments==2.17.2
 requests==2.31.0
 rich==13.7.1
 six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.0
 stack-data==0.6.3
 traitlets==5.14.2
