--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ traitlets==5.14.2
 types-pytz==2024.1.0.20240203
 types-pyyaml==6.0.12.20240311
 typing-extensions==4.11.0
+unidecode==1.3.8
 urllib3==2.2.1
 uuid==1.30
 wcwidth==0.2.13
